Change select option styles for better visibility

--- a/cart.html
+++ b/cart.html
@@ -510,8 +510,8 @@
         }
 
         select option {
-            background: #0b0a12;
-            color: rgba(255, 255, 255, .92);
+        background: #efefef;
+        color: rgba(0, 0, 0, 0.92);
         }
 
         .hint {
