convert music for timecat to mp3, drasticly improvingload times

--- a/products/games/TimeCat/index.html
+++ b/products/games/TimeCat/index.html
@@ -2592,7 +2592,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 01</span>
               <h4>Untitled Title</h4>
               <audio controls>
-                <source src="Music/Untitled Title.wav">
+                <source src="Music/Untitled Title.mp3">
               </audio>
             </div>
 
@@ -2601,7 +2601,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 02</span>
               <h4>Bu ba du ba House Cat</h4>
               <audio controls>
-                <source src="Music/Bu ba du ba House Cat.wav">
+                <source src="Music/Bu ba du ba House Cat.mp3">
               </audio>
             </div>
 
@@ -2610,7 +2610,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 03</span>
               <h4>Ominous Hawaiian Beach Dance</h4>
               <audio controls>
-                <source src="Music/Ominous Hawaiian Beach Dance.wav">
+                <source src="Music/Ominous Hawaiian Beach Dance.mp3">
               </audio>
             </div>
 
@@ -2619,7 +2619,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 04</span>
               <h4>Rainy Hawaiian Beach Dance</h4>
               <audio controls>
-                <source src="Music/Rainy Hawaiian Beach Dance.wav">
+                <source src="Music/Rainy Hawaiian Beach Dance.mp3">
               </audio>
             </div>
 
@@ -2628,7 +2628,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 05</span>
               <h4>The Lab</h4>
               <audio controls>
-                <source src="Music/The Lab.wav">
+                <source src="Music/The Lab.mp3">
               </audio>
             </div>
 
@@ -2637,7 +2637,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 06</span>
               <h4>You Ate My Button!</h4>
               <audio controls>
-                <source src="Music/You Ate My Button!.wav">
+                <source src="Music/You Ate My Button!.mp3">
               </audio>
             </div>
 
@@ -2646,7 +2646,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 07</span>
               <h4>Lab Boss Norm</h4>
               <audio controls>
-                <source src="Music/Lab Boss Norm.wav">
+                <source src="Music/Lab Boss Norm.mp3">
               </audio>
             </div>
 
@@ -2655,7 +2655,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 08</span>
               <h4>Lab Boss Anger Spikes</h4>
               <audio controls>
-                <source src="Music/Lab Boss Anger Spikes.wav">
+                <source src="Music/Lab Boss Anger Spikes.mp3">
               </audio>
             </div>
 
@@ -2664,7 +2664,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 09</span>
               <h4>A New Truth</h4>
               <audio controls>
-                <source src="Music/A New Truth.wav">
+                <source src="Music/A New Truth.mp3">
               </audio>
             </div>
 
@@ -2673,7 +2673,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 10</span>
               <h4>Boss De Some Truth — Norm</h4>
               <audio controls>
-                <source src="Music/Boss De Some Truth Norm.wav">
+                <source src="Music/Boss De Some Truth Norm.mp3">
               </audio>
             </div>
 
@@ -2682,7 +2682,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 11</span>
               <h4>Boss De Some Truth — Anger Spikes</h4>
               <audio controls>
-                <source src="Music/Boss De Some Truth Anger Spikes.wav">
+                <source src="Music/Boss De Some Truth Anger Spikes.mp3">
               </audio>
             </div>
 
@@ -2691,7 +2691,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 12</span>
               <h4>Hot on the Trail</h4>
               <audio controls>
-                <source src="Music/Hot on the Trail.wav">
+                <source src="Music/Hot on the Trail.mp3">
               </audio>
             </div>
 
@@ -2700,7 +2700,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 13</span>
               <h4>Drop It Like It's Hot (It's a Boss)</h4>
               <audio controls>
-                <source src="Music/Drop it Like its Hot It's a Boss.wav">
+                <source src="Music/Drop it Like its Hot It's a Boss.mp3">
               </audio>
             </div>
 
@@ -2709,7 +2709,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 14</span>
               <h4>Malfunction Tango of One</h4>
               <audio controls>
-                <source src="Music/Malfunction Tango of One.wav">
+                <source src="Music/Malfunction Tango of One.mp3">
               </audio>
             </div>
 
@@ -2718,7 +2718,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 15</span>
               <h4>And a Malfunction Tango of Two</h4>
               <audio controls>
-                <source src="Music/And a Malfunction Tango of Two.wav">
+                <source src="Music/And a Malfunction Tango of Two.mp3">
               </audio>
             </div>
 
@@ -2727,7 +2727,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 16</span>
               <h4>Time Warp Tango of One</h4>
               <audio controls>
-                <source src="Music/Time Warp Tango of One.wav">
+                <source src="Music/Time Warp Tango of One.mp3">
               </audio>
             </div>
 
@@ -2736,7 +2736,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 17</span>
               <h4>And a Time Tango of Two</h4>
               <audio controls>
-                <source src="Music/And a Time Tango of Two.wav">
+                <source src="Music/And a Time Tango of Two.mp3">
               </audio>
             </div>
 
@@ -2745,7 +2745,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 18</span>
               <h4>Timely Daggers</h4>
               <audio controls>
-                <source src="Music/Timely Daggers.wav">
+                <source src="Music/Timely Daggers.mp3">
               </audio>
             </div>
 
@@ -2754,7 +2754,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 19</span>
               <h4>Entertain Some Puzzles Would You</h4>
               <audio controls>
-                <source src="Music/Entertain Some Puzzles Would You.wav">
+                <source src="Music/Entertain Some Puzzles Would You.mp3">
               </audio>
             </div>
 
@@ -2763,7 +2763,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 20</span>
               <h4>Back on the Trail of Mystery</h4>
               <audio controls>
-                <source src="Music/Back on the Trail of Mystery.wav">
+                <source src="Music/Back on the Trail of Mystery.mp3">
               </audio>
             </div>
 
@@ -2772,7 +2772,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 21</span>
               <h4>More Mysterious Trails</h4>
               <audio controls>
-                <source src="Music/More Mysterious Trails.wav">
+                <source src="Music/More Mysterious Trails.mp3">
               </audio>
             </div>
 
@@ -2781,7 +2781,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 22</span>
               <h4>Look What the Rat Dragged In</h4>
               <audio controls>
-                <source src="Music/Look what the rat dragged in.wav">
+                <source src="Music/Look what the rat dragged in.mp3">
               </audio>
             </div>
 
@@ -2790,7 +2790,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 23</span>
               <h4>Not So Mysterious Boss</h4>
               <audio controls>
-                <source src="Music/Not So Mysterious Boss.wav">
+                <source src="Music/Not So Mysterious Boss.mp3">
               </audio>
             </div>
 
@@ -2799,7 +2799,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 24</span>
               <h4>Yet Another Trail of Mystery</h4>
               <audio controls>
-                <source src="Music/Yet Another Trail Of Mystery.wav">
+                <source src="Music/Yet Another Trail Of Mystery.mp3">
               </audio>
             </div>
 
@@ -2808,7 +2808,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 25</span>
               <h4>Almost Boss</h4>
               <audio controls>
-                <source src="Music/Almost Boss.wav">
+                <source src="Music/Almost Boss.mp3">
               </audio>
             </div>
 
@@ -2817,7 +2817,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 26</span>
               <h4>Almost Boss Anger Spikes</h4>
               <audio controls>
-                <source src="Music/Almost Boss Anger Spikes.wav">
+                <source src="Music/Almost Boss Anger Spikes.mp3">
               </audio>
             </div>
 
@@ -2826,7 +2826,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 27</span>
               <h4>At the Edge of the End</h4>
               <audio controls>
-                <source src="Music/At The Edge Of The End.wav">
+                <source src="Music/At The Edge Of The End.mp3">
               </audio>
             </div>
 
@@ -2835,7 +2835,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 28</span>
               <h4>GlitchFront – The Final Boss</h4>
               <audio controls>
-                <source src="Music/GlitchFront - The Final Boss.wav">
+                <source src="Music/GlitchFront - The Final Boss.mp3">
               </audio>
             </div>
 
@@ -2844,7 +2844,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 29</span>
               <h4>Ur the Only Evil One 😈</h4>
               <audio controls>
-                <source src="Music/Ur the only evil one 😈.wav">
+                <source src="Music/Ur the only evil one 😈.mp3">
               </audio>
             </div>
 
@@ -2853,7 +2853,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 30</span>
               <h4>Another Puzzle, Another Time, Another Dream</h4>
               <audio controls>
-                <source src="Music/Another Puzzle, Another Time, Another Dream.wav">
+                <source src="Music/Another Puzzle, Another Time, Another Dream.mp3">
               </audio>
             </div>
 
@@ -2862,7 +2862,7 @@ document.addEventListener("DOMContentLoaded", () => {
               <span class="time-rule-index">TRACK 31</span>
               <h4>Credits</h4>
               <audio controls>
-                <source src="Music/Credits.wav">
+                <source src="Music/Credits.mp3">
               </audio>
             </div>
 
