update AI pages new workflow for loading

--- a/products/ai/script-generator.html
+++ b/products/ai/script-generator.html
@@ -5,8 +5,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feature Removed - Unlim8ted</title>
-  
+    <title>Feature Removed</title>
+    <meta name="description"content="Unlim8ted Film Script Generator. Unlim8ted Screenplay generator. Always free no sign up required. Powered by Unlim8ted Studio Productions."/>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,6 +67,8 @@
 
 </head>
 <body>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <div id="inner-wrap">
         <div class="logo" style="z-index: 2;">
           <a href="/">
