fix hint error in puzzle squares

--- a/products/games/puzzle-squares.html
+++ b/products/games/puzzle-squares.html
@@ -384,7 +384,7 @@
                 I need a hint
               </button>
               <button class="btn" id="hint5"
-                onclick="this.textContent='Any of the ^\\'s may refer to the list with ^ in the beginning according to our other hackers.'">
+                onclick="this.textContent='Any of the ^\'s may refer to the list with ^ in the beginning according to our other hackers.'">
                 I need a hint
               </button>
             </div>
