fix product page images + format better and move some stuff into tools

--- a/products/index.html
+++ b/products/index.html
@@ -32,345 +32,11 @@
     import { getFirebase } from "/components/firebase-init.js";
 
     const { auth, db } = getFirebase();</script>
-    <style>
-        /* General body styles */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #0a0a0a;
-            color: #e0e0e0;
-        }
-
-        .content-section {
-            padding: 40px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            color: #00ffc6;
-            text-shadow: 0 0 10px #00ffc6, 0 0 20px #00ffc6;
-            margin-bottom: 30px;
-        }
-
-        .product-category {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .product-box {
-            text-align: center;
-            background-color: #1c1c1c;
-            padding: 20px;
-            border-radius: 10px;
-            transition: transform 0.3s, box-shadow 0.3s;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            text-decoration: none;
-            color: #e0e0e0;
-        }
-
-        .product-box:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 15px rgba(0, 255, 198, 0.7);
-        }
-
-        .product-box img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-
-        .product-box h2 {
-            font-size: 1.5rem;
-            color: #00ffc6;
-        }
-
-        .product-box p {
-            font-size: 1rem;
-            color: #cccccc;
-        }
-
-        a {
-            color: #00ffc6;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-shadow: 0 0 10px #00ffc6;
-        }
-
-        /* Spinner-specific styles */
-        .spinner-container {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 40px;
-        }
-
-        .spinner {
-            width: 60vw;
-            max-width: 300px;
-            height: 60vw;
-            max-height: 300px;
-            border-radius: 50%;
-            border: 10px solid #333;
-            position: relative;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 255, 198, 0.7);
-        }
-
-        .spinner-choice {
-            position: absolute;
-            width: 50%;
-            height: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #ffffff;
-            font-weight: bold;
-            font-size: 0.9rem;
-            transform-origin: bottom right;
-        }
-
-        .spin-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #00ffc6;
-            border: none;
-            border-radius: 5px;
-            color: #0a0a0a;
-            cursor: pointer;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        .spin-btn:hover {
-            background-color: #00cc9e;
-            box-shadow: 0 0 10px #00ffc6;
-        }
-
-        .popup,
-        .overlay {
-            display: none;
-        }
-
-        .popup {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #0a0a0a;
-            padding: 20px;
-            border-radius: 10px;
-            border: 1px solid #333;
-            box-shadow: 0 0 20px rgba(0, 255, 198, 0.7);
-            z-index: 10;
-            text-align: center;
-            color: #000000;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 9;
-        }
-
-        .product-category,
-        .item-category {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-
-        .product-box,
-        .item-box {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            transition: transform 0.3s ease;
-            width: 250px;
-            text-align: center;
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .product-box:hover,
-        .item-box:hover {
-            transform: scale(1.05);
-        }
-
-        .product-box img,
-        .item-box img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .product-box h2,
-        .item-box h3 {
-            color: #000000;
-            font-size: 1.5em;
-            margin: 10px 0;
-        }
-
-        .product-box p,
-        .item-box p {
-            font-size: 1em;
-            color: #666;
-            padding: 0 10px 20px;
-        }
-
-        .search-bar {
-            margin: 20px 0;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .search-bar input[type="text"],
-        .search-bar select {
-            padding: 10px;
-            font-size: 1em;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-            :root {
-      --bg0: #07070c;
-      --bg1: #0a0b12;
-      --card: rgba(255, 255, 255, 0.06);
-      --card2: rgba(255, 255, 255, 0.09);
-      --line: rgba(255, 255, 255, 0.10);
-      --ink: rgba(233, 231, 255, 0.92);
-      --muted: rgba(233, 231, 255, 0.68);
-      --accent: #00ffc6;
-      --accent2: #ff00ff;
-      --shadow: 0 10px 30px rgba(0,0,0,.45);
-      --radius: 16px;
-    }
-
-    * { box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      color: var(--ink);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background:
-        radial-gradient(900px 500px at 20% 10%, rgba(0,255,198,.18), transparent 60%),
-        radial-gradient(900px 500px at 80% 25%, rgba(255,0,255,.14), transparent 60%),
-        radial-gradient(900px 500px at 50% 90%, rgba(0, 255, 217, 0.1), transparent 60%),
-        linear-gradient(180deg, var(--bg0), var(--bg1));
-    }
-
-    </style>
+    <link rel="stylesheet" href="resources/css/main.css">
+    <script src="resources/js/smooth-scroll.js"></script>
 </head>
 <script>
-/* Drop-in Smooth Scroll (wheel + touch) */
-(() => {
-  const prefersReduced = matchMedia("(prefers-reduced-motion: reduce)").matches;
-  if (prefersReduced) return;
 
-  // If you have a custom scroll container, set it here; otherwise it uses the document.
-  const container = document.scrollingElement || document.documentElement;
-
-  let targetY = window.scrollY || 0;
-  let currentY = targetY;
-  let running = false;
-
-  // Tuning
-  const EASE = 0.085;          // lower = smoother/laggier, higher = snappier (0.06–0.14)
-  const WHEEL_MULT = 1.0;      // 0.8–1.2
-  const TOUCH_MULT = 1.0;      // 0.8–1.2
-  const STOP_EPS = 0.5;        // px
-
-  const clamp = (v, a, b) => Math.max(a, Math.min(b, v));
-  const maxScroll = () => Math.max(0, container.scrollHeight - innerHeight);
-
-  function tick() {
-    running = true;
-
-    const diff = targetY - currentY;
-    currentY += diff * EASE;
-
-    // snap when close
-    if (Math.abs(diff) < STOP_EPS) {
-      currentY = targetY;
-    }
-
-    window.scrollTo(0, currentY);
-
-    // Keep anims that listen to scroll in sync
-    // (If you already have onScroll -> requestAnimationFrame(update), this will trigger it naturally)
-    // But some setups need a nudge:
-    window.dispatchEvent(new Event("scroll"));
-
-    if (currentY !== targetY) {
-      requestAnimationFrame(tick);
-    } else {
-      running = false;
-    }
-  }
-
-  function go(delta) {
-    targetY = clamp(targetY + delta, 0, maxScroll());
-    if (!running) requestAnimationFrame(tick);
-  }
-
-  // Wheel
-  function onWheel(e) {
-    // allow normal page zoom with ctrl/cmd + wheel
-    if (e.ctrlKey || e.metaKey) return;
-
-    e.preventDefault();
-    go(e.deltaY * WHEEL_MULT);
-  }
-
-  // Touch
-  let lastTouchY = 0;
-  function onTouchStart(e) {
-    if (!e.touches || !e.touches.length) return;
-    lastTouchY = e.touches[0].clientY;
-  }
-  function onTouchMove(e) {
-    if (!e.touches || !e.touches.length) return;
-    e.preventDefault();
-    const y = e.touches[0].clientY;
-    const delta = (lastTouchY - y) * TOUCH_MULT;
-    lastTouchY = y;
-    go(delta);
-  }
-
-  // Keep targets aligned if user drags scrollbar, uses PgDn, etc.
-  function syncToNative() {
-    if (running) return;
-    targetY = currentY = window.scrollY || 0;
-  }
-
-  addEventListener("wheel", onWheel, { passive: false });
-  addEventListener("touchstart", onTouchStart, { passive: true });
-  addEventListener("touchmove", onTouchMove, { passive: false });
-  addEventListener("scroll", syncToNative, { passive: true });
-  addEventListener("resize", () => {
-    targetY = clamp(targetY, 0, maxScroll());
-    currentY = clamp(currentY, 0, maxScroll());
-  }, { passive: true });
-
-  // Initialize
-  targetY = currentY = window.scrollY || 0;
-})();
 </script>
 
 
@@ -381,17 +47,17 @@
         <p>Discover our amazing products.</p>
         <div class="product-category">
             <a href="films" class="product-box">
-                <img src="https://unlim8ted.com/images\products\films\The Life of a Meatball.jpg" alt="Films">
+                <img src="https://unlim8ted.com/assets/images\products\films\The Life of a Meatball.jpg" alt="Films">
                 <h2>Films</h2>
                 <p>Explore our latest films.</p>
             </a>
             <a href="music" class="product-box">
-                <img src="https://unlim8ted.com/images\products\music\music icon.png" alt="Music">
+                <img src="https://unlim8ted.com/assets/images\products\music\music icon.png" alt="Music">
                 <h2>Music</h2>
                 <p>Listen to our newest music releases.</p>
             </a>
             <a href="podcasts" class="product-box">
-                <img src="https://unlim8ted.com/images\products\podcasts\podcasts icon.png" alt="Podcast">
+                <img src="https://unlim8ted.com/assets/images\products\podcasts\podcasts icon.png" alt="Podcast">
                 <h2>Podcasts</h2>
                 <p>Listen to our newest podcasts.</p>
             </a>
